Fix alert boxes to not shift

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -19,8 +19,8 @@ h3 {
   }
 }
 .alerts {
-  min-height: 24px;//this is needed to stop the space from shifting
-  font-size: 3vh;
+   min-height: 4vh;
+   font-size: 100%;
 }
 .warnings {
   color: $warnings;
